[Overflow-543] [BUGFIX] Fix overflow text in Question Card (#353)

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -23,6 +23,10 @@
     }
 }
 
+pre {
+    white-space: pre-wrap;
+}
+
 input::-ms-reveal,
 input::-ms-clear {
     display: none;
